--- a/index.html
+++ b/index.html
@@ -235,6 +235,45 @@
         .benefit-content p {
             color: #c0c0c0;
         }
+        /* About Me Section */
+        .about-me {
+            padding: 3rem 2rem;
+            background: linear-gradient(135deg, #16213e 0%, #0f3460 100%);
+            text-align: center;
+        }
+        .about-me .section-title {
+            margin-bottom: 1.5rem;
+        }
+        .about-me p {
+            max-width: 700px;
+            margin: 0 auto 2rem;
+            color: #b0b0b0;
+            font-size: 1.1rem;
+        }
+        .about-links {
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+            flex-wrap: wrap;
+        }
+        .about-links a {
+            background: linear-gradient(135deg, #00d4ff 0%, #0099ff 100%);
+            color: #fff;
+            padding: 0.8rem 2rem;
+            border-radius: 50px;
+            text-decoration: none;
+            font-weight: 600;
+            transition: 0.3s;
+            margin-bottom: 1rem;
+            display: inline-block;
+        }
+        .about-links a.linkedin {
+            background: linear-gradient(135deg, #0077b5 0%, #00d4ff 100%);
+        }
+        .about-links a:hover {
+            box-shadow: 0 5px 20px rgba(0, 212, 255, 0.5);
+            transform: translateY(-2px);
+        }
         /* Contact Section */
         .contact-section {
             padding: 4rem 2rem;
@@ -321,6 +360,10 @@
             .cta-button {
                 width: 100%;
                 justify-content: center;
+            }
+            .about-links {
+                flex-direction: column;
+                gap: 1rem;
             }
         }
         /* Floating WhatsApp Button */
@@ -500,6 +543,23 @@
                     <p>Caregivers and family can participate in the treatment process and learn proper techniques.</p>
                 </div>
             </div>
+        </div>
+    </section>
+    
+    <!-- About Me Section -->
+    <section class="about-me">
+        <h2 class="section-title">About Dr. Mustafa Durrani PT</h2>
+        <p>
+            Driven Physiotherapist with an unwavering work ethic and a penchant for punctuality. As a proficient team leader, I cultivate collaboration while passionately advancing my expertise. 
+            Committed to the transformative potential of physiotherapy, I aim to make a profound impact on my patient's lives.
+        </p>
+        <div class="about-links">
+            <a href="mailto:mustafa.durrani007@gmail.com">
+                📧 Email: mustafa.durrani007@gmail.com
+            </a>
+            <a href="https://www.linkedin.com/in/mustafa-durrani-0a66742b9/" target="_blank" class="linkedin">
+                🔗 LinkedIn
+            </a>
         </div>
     </section>
 
